# SEAL-Demo

./: .gitmodules  README.md
AsureRun/Client/AsureRun_Android/AsureRun/app/: CMakeLists.txt  build.gradle
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/: AndroidManifest.xml
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/assets/: License.txt
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/cpp/: CryptoAdapter.cpp  CryptoContext.cpp  CryptoContext.h
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/res/anim/: item_animation_fall_down.xml
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/res/drawable/: google_sign_in_round_button.xml  ic_about_logo.xml  ic_arrow_forward__24px.xml  ic_baseline_power.xml  ic_facebook_signin.xml  ic_history.xml  ic_km_miles_grey.xml  ic_km_miles_white.xml  ic_microsoft_signin.xml  ic_play.xml  ic_prediction.xml  ic_setting.xml  ic_sign_out_01.xml  ic_speed.xml  ic_stop.xml  ic_time.xml  ic_tracking.xml  ms_sign_in_round_button.xml  round_button.xml
AsureRun/Client/AsureRun_Android/AsureRun/app/src/main/res/layout/: about_page_fragment_layout.xml  activity_home_layout.xml  activity_run.xml  activity_run_layout.xml  activity_run_maps_layout.xml  activity_run_summary.xml  activity_sign_in_layout.xml  app_bar_home.xml  contact_us_layout.xml  content_home_fragment.xml  debug_fragment_layout.xml  fragment_advanced_settings.xml  fragment_delete_settings.xml  fragment_history_details_layout.xml  fragment_home.xml  fragment_logout_layout.xml  fragment_predictions_layout.xml  fragment_run_settings.xml  (+8 more)
(+86 files in other folders)
